# course_project_ray_trace_renderer

./: .gitignore  CMakeLists.txt  MainWindow.cpp  Photon.cpp  Photon.h  PhotonMapGenerationProcedure.cpp  PhotonMapGenerationProcedure.h  README.md  RTRCamera.cpp  RTRCamera.h  RTRColor.cpp  RTRColor.h  RTRGeometry.cpp  RTRGeometry.h  RTRKdTree.cpp  RTRKdTree.h  RTRMaterial.cpp  RTRMaterial.h  RTRMatrix.cpp  RTRMatrix.h  RTRModel.cpp  RTRModel.h  RTRModelObject.h  RTRModelPolygen.h  RTRModelVertex.h  RTRRadianceRenderer.cpp  RTRRadianceRenderer.h  RTRRenderElement.cpp  RTRRenderElement.h  RTRRenderThread.cpp  RTRRenderThread.h  RTRRenderer.cpp  RTRRenderer.h  RTRTexture.h  RTRVector2D.cpp  RTRVector2D.h  RTRVector3D.cpp  RTRVector3D.h  RTRViewer.cpp  RTRViewer.h  (+11 more)
BRDF/: DiffuseBRDF.cpp  DiffuseBRDF.h
Geometry/: NearestSearchKdTree.h
Light/: RTRLightAbstract.h  RTRLightPoint.cpp  RTRLightPoint.h
RayTracing/: AbstractRayTracingKernel.cpp  AbstractRayTracingKernel.h  EmbreeRayTracingKernel.cpp  EmbreeRayTracingKernel.h  SimpleKdTreeRayTracingKernel.cpp  SimpleKdTreeRayTracingKernel.h
samples/: RTRRenderElement.h
